# ocr-worker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml
docker/: Dockerfile  entrypoint.sh  run.bash
ocrworker/: celery_app.py  config.py  constants.py  exceptions.py  models.py  ocr.py  plib.py  s3.py  schema.py  tasks.py  utils.py
ocrworker/cli/: ocr.py
ocrworker/db/: __init__.py  api.py  doc_ver.py  engine.py  models.py  orm.py  session.py
tests/: conftest.py  test_document_version.py
