[tool.poetry]
name = "ocrworker"
version = "0.3"
description = "OCR Worker"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ocrmypdf = "^16.6"
ocrmypdf-papermerge = "0.7.1"
celery = {extras = ["redis"], version = "^5.5.3"}
sqlalchemy = "^2.0.43"
typer = "^0.15"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.2"
pyyaml = "^6.0.1"
pikepdf = "^9.0.0"
botocore = "^1.34.127"
boto3 = "^1.34.127"
httpx = "^0.27.0"
psycopg2 = { version = "^2.9.2", optional = true}
mysqlclient = {version = "^2.2.0", optional = true}
lxml = "^5.4.0"

[tool.poetry.extras]
mysql = ["mysqlclient"]
pg = ["psycopg2"]
databases = ["mysqlclient", "psycopg2"]

[tool.poetry.scripts]
ocr = "ocrworker.cli.ocr:app"

[tool.taskipy.tasks]
worker = "celery -A ocrworker.celery_app worker"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^3.7.1"
taskipy = "^1.12.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
